--- a/app/src/main/res/layout/list_item_animal.xml
+++ b/app/src/main/res/layout/list_item_animal.xml
@@ -12,6 +12,7 @@
         android:scaleType="center"
         android:src="@drawable/cat" />
     <TextView
+        android:id="@+id/animal_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
