--- a/app/src/main/res/layout/activity_fragments_animal_list.xml
+++ b/app/src/main/res/layout/activity_fragments_animal_list.xml
@@ -7,12 +7,12 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    xmlns:tools="tutorial.larys.info.Zad1.fragment.FragmentActivity"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical">
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:gravity="center"
         android:padding="20dp"
         android:text="Przetestuj również poziomy układ ekranu. Wystarczy, ze obrócisz ekran"/>
