--- a/app/src/main/res/layout/activity_fragments_animal_list.xml
+++ b/app/src/main/res/layout/activity_fragments_animal_list.xml
@@ -8,6 +8,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".fragment.AnimalListFragmentActivity"
     android:orientation="vertical">
 
     <TextView
