--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -21,4 +21,24 @@
         <item>chocolate</item>
         <item>vanillia</item>
     </array>
+
+    <array name="cities">
+        <item>Gdańsk</item>
+        <item>Kraków</item>
+        <item>Lódź</item>
+        <item>Poznań</item>
+        <item>Rzeszów</item>
+        <item>Wrocłąw</item>
+        <item>Warszawa</item>
+    </array>
+
+    <array name="cities_keys">
+        <item>gdansk</item>
+        <item>krakow</item>
+        <item>lodz</item>
+        <item>poznan</item>
+        <item>rzeszow</item>
+        <item>wroclaw</item>
+        <item>warszawa</item>
+    </array>
 </resources>
